--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
 {% load static %}<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>{% block title %}Django Boards{% endblock %}</title>
-    <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/app.css' %}">
-    {% block stylesheet %}{% endblock %}
+      <meta charset="utf-8">
+      <title>{% block title %}Django Boards{% endblock %}</title>
+      <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
+      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+      <link rel="stylesheet" href="{% static 'css/app.css' %}">
+      {% block stylesheet %}{% endblock %}
   </head>
   <body>
     {% block body %}
@@ -25,8 +25,8 @@
               {{ user.username }}
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-              <a class="dropdown-item" href="#">My account</a>
-              <a class="dropdown-item" href="#">Change password</a>
+              <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
+              <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
             </div>
