admin:login link was added

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
               <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
               <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+                {% if user.is_superuser or user.is_staff %}
+                 <a class="dropdown-item" href="{% url 'admin:login' %}">admin panel</a>
+                 {% endif %}
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
             </div>
